prueba 3 de arreglo de codigo

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="shortcut icon" href="img/candado-icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="shortcut icon" href="/img/candado-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Montserrat:wght@300&display=swap"
@@ -26,7 +26,7 @@
 
 
         <div class="condiciones">
-            <p> <img src="img/advertencia.png"> Solo letras minúsculas y sin acentos.</p>
+            <p> <img src="/img/advertencia.png"> Solo letras minúsculas y sin acentos.</p>
         </div>
         <div class="botones">
             <button class="boton-encriptar" type="button" onclick="encriptar()">Encriptar</button>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="encriptado">
-            <img src="img/ningunmensaje_2.png" alt="no-se-ha-encontrado-ningun-mensaje" id="personaje">
+            <img src="/img/ningunmensaje_2.png" alt="no-se-ha-encontrado-ningun-mensaje" id="personaje">
             <div class="mensaje-encriptado" id="mensaje-encriptado">
                 <h2 id="mensaje-titulo">No se ha encontrado ningun mensaje</h2>
                 <p id="parrafo">Ingresa el texto que deseas encriptar o desencriptar.</p>
@@ -51,14 +51,14 @@
 
     <footer>
         <a href="https://github.com/JhonDelvis20" target="_blank"
-        ><img src="img/github.png" alt="github"
+        ><img src="/img/github.png" alt="github"
       /></a>
       <p class="copyright">&#169;Alura | Creado por Jhon Delvis | 2023</p>
 
     </footer>
 
 </body>
-<script src="js/script.js"></script>
+<script src="/js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </html>
